env/test/jaeger-create-span-app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-app
  labels:
    app: my-app
spec:
  selector:
    matchLabels:
      app: my-app
  replicas: 1
  template:
    metadata:
      labels:
        app: my-app
      # annotations:
      #   instrumentation.opentelemetry.io/inject-java: auto-instrumentation
    spec:
      containers:
        - name: myapp
          image: jaegertracing/vertx-create-span:operator-e2e-tests
          env:
            - name: JAEGER_AGENT_HOST
              value: otel-collector-daemonset-collector.monitoring.svc.cluster.local
          ports:
            - containerPort: 8080
              protocol: TCP
