env/test/jaeger-create-span-app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myingress
  namespace: test
  labels:
    name: myingress
spec:
  rules:
  - host: mk.jaeger-test-app.local
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: myapp
            port: 
              number: 8080
